--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "url": "https://github.com/neuchatech/omnisync/issues"
   },
   "homepage": "https://github.com/neuchatech/omnisync#readme",
-  "description": "",
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.2.7",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.4.5"
-  }
+  },
+  "description": ""
 }
