--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "omnisync",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./react": "./src/react/index.ts"
+  },
   "scripts": {
     "test": "jest"
   },
