--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
   },
   "homepage": "https://github.com/neuchatech/omnisync#readme",
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "@testing-library/dom": "^10.4.1",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "better-sqlite3": "^12.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-test-renderer": "^18.3.1",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
-    "@types/react": "^19.2.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.4.5"
